log
Thu Apr 16 08:02:13 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
6b6f62e
Thu Apr 16 08:02:25 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
e38a651
Thu Apr 16 08:38:48 PM UTC 2026: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:5: error: expected ‘,’ or ‘;’ before ‘long’
   63 |     long pos = hash(key, map->capacity);
      |     ^~~~
hashmap.c:64:22: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   64 |     if (map->buckets[pos] == NULL) map->buckets[pos] = new);
      |                      ^~~
      |                      pow
hashmap.c:64:22: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:64:59: error: expected ‘;’ before ‘)’ token
   64 |     if (map->buckets[pos] == NULL) map->buckets[pos] = new);
      |                                                           ^
      |                                                           ;
hashmap.c:64:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   64 |     if (map->buckets[pos] == NULL) map->buckets[pos] = new);
      |     ^~
hashmap.c:64:59: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   64 |     if (map->buckets[pos] == NULL) map->buckets[pos] = new);
      |                                                           ^
hashmap.c:64:59: error: expected statement before ‘)’ token
hashmap.c:66:5: error: ‘else’ without a previous ‘if’
   66 |     else
      |     ^~~~
hashmap.c:74:8: error: ‘map’ is a pointer; did you mean to use ‘->’?
   74 |     map.size++;
      |        ^
      |        ->
cc1: all warnings being treated as errors
eeb35b3
Thu Apr 16 08:43:27 PM UTC 2026: 
 hashmap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:64:59: error: expected ‘;’ before ‘)’ token
   64 |     if (map->buckets[pos] == NULL) map->buckets[pos] = new);
      |                                                           ^
      |                                                           ;
hashmap.c:64:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   64 |     if (map->buckets[pos] == NULL) map->buckets[pos] = new);
      |     ^~
hashmap.c:64:59: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   64 |     if (map->buckets[pos] == NULL) map->buckets[pos] = new);
      |                                                           ^
hashmap.c:64:59: error: expected statement before ‘)’ token
hashmap.c:66:5: error: ‘else’ without a previous ‘if’
   66 |     else
      |     ^~~~
hashmap.c:78:8: error: ‘map’ is a pointer; did you mean to use ‘->’?
   78 |     map.size++;
      |        ^
      |        ->
cc1: all warnings being treated as errors
0ce5041
Thu Apr 16 08:45:02 PM UTC 2026: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|6
total_score: 5/60
11f1346
Thu Apr 16 08:49:46 PM UTC 2026: 
 tests:  3|6
total_score: 5/60
8d6d591
Thu Apr 16 08:51:52 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|7
total_score: 0/60
9190168
Thu Apr 16 08:53:53 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 5/60
de92adc
Thu Apr 16 08:57:38 PM UTC 2026: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:69:20: error: comparison between pointer and integer [-Werror]
   69 |         while (pos != NULL && key != NULL)
      |                    ^~
cc1: all warnings being treated as errors
8839f8f
Thu Apr 16 08:58:27 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
c5ea851
Mon Apr 20 03:46:18 AM UTC 2026: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
62c72ec
Mon Apr 20 04:16:59 AM UTC 2026: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:107:30: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
  107 |                 map->current = map->buckets[i];
      |                              ^
743a992
Mon Apr 20 04:17:37 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
bc08f45
Mon Apr 20 04:20:47 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 30/60
3b365a3
Mon Apr 20 04:25:44 AM UTC 2026: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|2
total_score: 40/60
c6eaad9
Mon Apr 20 03:32:27 PM UTC 2026: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘firstMap’:
hashmap.c:143:30: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
  143 |                 map->current = map->buckets[i];
      |                              ^
5779397
Mon Apr 20 03:33:06 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
07b2eab
